fix(sonarqube): more sonarqube fixes